--- a/Decision_Tree_By_Rank.ipynb
+++ b/Decision_Tree_By_Rank.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Copy of Decision Tree Rank.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMKvy+4aeTvK6vznrOd5+3K",
+      "authorship_tag": "ABX9TyMnd71SlA9gJ38WgzEY2X0v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,19 +51,19 @@
       "metadata": {
         "id": "GO54Vt6Ebc5W"
       },
-      "execution_count": 6,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 302
         },
         "id": "AttPxuJAam8l",
-        "outputId": "5c798e83-af2e-4835-9a06-a3e01585b2e0"
+        "outputId": "9ae8fe19-0b22-4844-ce50-800c2687d082"
       },
       "outputs": [
         {
@@ -107,7 +107,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3eb67f5d-5c71-4973-a14c-6ce5e3a53015\">\n",
+              "  <div id=\"df-b9fbfe0c-0693-4430-bbaf-4798ffc732c6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -220,7 +220,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3eb67f5d-5c71-4973-a14c-6ce5e3a53015')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b9fbfe0c-0693-4430-bbaf-4798ffc732c6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -271,12 +271,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3eb67f5d-5c71-4973-a14c-6ce5e3a53015 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b9fbfe0c-0693-4430-bbaf-4798ffc732c6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3eb67f5d-5c71-4973-a14c-6ce5e3a53015');\n",
+              "          const element = document.querySelector('#df-b9fbfe0c-0693-4430-bbaf-4798ffc732c6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -299,7 +299,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 23
         }
       ],
       "source": [
@@ -321,9 +321,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qHLKNBDmbqwJ",
-        "outputId": "b58fce2f-fc2c-4c5e-c4dc-ab2a336bead2"
+        "outputId": "a0421cfb-1ce4-4a34-a2df-e76a772069f2"
       },
-      "execution_count": 8,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,7 +339,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 24
         }
       ]
     },
@@ -354,7 +354,7 @@
       "metadata": {
         "id": "oABER-MqbrUj"
       },
-      "execution_count": 9,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -368,16 +368,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6RUuABB2qMjY",
-        "outputId": "acf40f2a-b8fe-4e11-9789-f38373785fd9"
+        "outputId": "e0e2638e-d504-43d4-836c-1a3546f035b1"
       },
-      "execution_count": 11,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n",
             "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
             "  \n"
           ]
@@ -395,7 +393,7 @@
       "metadata": {
         "id": "KHZKsMR_qgZ7"
       },
-      "execution_count": 12,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -416,24 +414,24 @@
           "height": 1000
         },
         "id": "LrxKX-SxtRcB",
-        "outputId": "62afbbad-ed1a-4c31-9af3-22b5e7cf50d3"
+        "outputId": "11bad3cb-71ce-478e-b279-42c37ebb9b2e"
       },
-      "execution_count": 13,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+            "  after removing the cwd from sys.path.\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"\n"
+            "  import sys\n"
           ]
         },
         {
@@ -607,7 +605,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6d3d4a01-adc9-4199-8793-ff0dcbd8fd83\">\n",
+              "  <div id=\"df-1c336585-f4ea-47ef-8a68-b4f25b2327fa\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1110,7 +1108,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6d3d4a01-adc9-4199-8793-ff0dcbd8fd83')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1c336585-f4ea-47ef-8a68-b4f25b2327fa')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1161,12 +1159,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6d3d4a01-adc9-4199-8793-ff0dcbd8fd83 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1c336585-f4ea-47ef-8a68-b4f25b2327fa button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6d3d4a01-adc9-4199-8793-ff0dcbd8fd83');\n",
+              "          const element = document.querySelector('#df-1c336585-f4ea-47ef-8a68-b4f25b2327fa');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1189,7 +1187,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 28
         }
       ]
     },
@@ -1204,7 +1202,7 @@
       "metadata": {
         "id": "9N_5bdzf1G8A"
       },
-      "execution_count": 14,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1216,7 +1214,7 @@
       "metadata": {
         "id": "bmTgR0ZN3c7O"
       },
-      "execution_count": 15,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1231,9 +1229,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "86ed9670-40b2-48f3-b61c-506ae38f6309"
+        "outputId": "43393755-4308-4b36-ae7f-53e00e028c52"
       },
-      "execution_count": 16,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1243,7 +1241,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 31
         }
       ]
     },
@@ -1256,7 +1254,7 @@
       "metadata": {
         "id": "tED1QB6YeGKb"
       },
-      "execution_count": 21,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1270,9 +1268,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mV4HpSXYecio",
-        "outputId": "37df35fc-0a0f-42cf-b490-5f58bebf0c86"
+        "outputId": "85676dcb-2b9f-44cf-bd68-39324517f930"
       },
-      "execution_count": 18,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -1295,13 +1293,13 @@
       ],
       "metadata": {
         "id": "L9yIRYghpELx",
-        "outputId": "c0328a7d-52f8-456e-e9f4-cd37d151bfe2",
+        "outputId": "f27d5d56-e8bd-4733-a8e3-ea25ddc04412",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": 16,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1314,20 +1312,9 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 34
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "hAECaB7APt_0"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
